feature/MongoDB some Anna's edits